<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme_background"
    tools:context="com.qoovers.snapwhyb.CreatePhotoEntryLocationModeOffActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        sothree:umanoPanelHeight="68dp"
        sothree:umanoShadowHeight="0dp"
        sothree:umanoParallaxOffset="0dp"
        sothree:umanoDragView="@+id/bottom_sliding_panel"
        sothree:umanoOverlay="true"
        sothree:umanoScrollableView="@+id/bottom_sliding_panel_drag_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--
                Wrapped inside RelativeLayout,
                All sub elements default aligned to top right of device screen
            -->
            <ImageView
                android:id="@+id/photo"
                android:contentDescription="@string/create_photo_entry_photo_content_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TransparentActionBar" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_sliding_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_0"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:animateLayoutChanges="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/bottom_sliding_panel_bar"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:padding="@dimen/margin_3"
                android:orientation="horizontal"
                android:background="@color/mask_primary_dark">

                <TextView
                    android:id="@+id/bottom_sliding_panel_bar_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/sliding_up_panel_bar_title"
                    style="@style/body.inversePrimary" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/bottom_sliding_panel_drag_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_9"
                    android:paddingBottom="@dimen/margin_10"
                    android:paddingStart="@dimen/margin_3"
                    android:paddingEnd="@dimen/margin_3"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">

                    <ImageView
                        android:id="@+id/icon_place"
                        android:contentDescription="@string/create_photo_entry_icon_place_content_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2"
                        android:src="@drawable/ic_place_grey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/field_place_description"
                        style="@style/EditText.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_0"
                        android:hint="@string/create_photo_entry_field_hint_place"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:maxLength="64"
                        app:layout_constraintStart_toEndOf="@id/icon_place"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/field_address"
                        style="@style/EditText.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_2"
                        android:hint="@string/create_photo_entry_field_hint_address"
                        android:inputType="textCapWords|textMultiLine"
                        android:maxLines="3"
                        android:maxLength="96"
                        app:layout_constraintStart_toEndOf="@id/icon_place"
                        app:layout_constraintTop_toBottomOf="@+id/field_place_description"/>

                    <EditText
                        android:id="@+id/field_country"
                        style="@style/EditText.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_2"
                        android:hint="@string/create_photo_entry_field_hint_country"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:maxLength="64"
                        app:layout_constraintStart_toEndOf="@id/icon_place"
                        app:layout_constraintTop_toBottomOf="@+id/field_address"/>

                    <ImageView
                        android:id="@+id/icon_time"
                        android:contentDescription="@string/create_photo_entry_icon_time_content_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2"
                        android:src="@drawable/ic_access_time_grey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/field_country" />

                    <TextView
                        android:id="@+id/timestamp"
                        style="@style/body.inverseSecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        app:layout_constraintStart_toEndOf="@id/icon_time"
                        app:layout_constraintTop_toBottomOf="@+id/field_country" />

                    <ImageView
                        android:id="@+id/icon_create"
                        android:contentDescription="@string/create_photo_entry_icon_create_content_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_3"
                        android:src="@drawable/ic_create_grey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_time" />

                    <EditText
                        android:id="@+id/field_message"
                        style="@style/EditText.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_2"
                        android:hint="@string/create_photo_entry_field_hint_message"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="120"
                        android:maxLines="3"
                        app:layout_constraintStart_toEndOf="@id/icon_create"
                        app:layout_constraintTop_toBottomOf="@+id/timestamp"/>

                </android.support.constraint.ConstraintLayout>

            </ScrollView>

        </LinearLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bottom_sliding_panel_anchor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginBottom="@dimen/margin_3"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginEnd="@dimen/margin_3"
        app:srcCompat="@drawable/ic_save_white"
        app:layout_anchor="@id/bottom_sliding_panel"
        app:layout_anchorGravity="top|end" />

</android.support.design.widget.CoordinatorLayout>
